# hbcd_qmri_postproc

./: .readthedocs.yaml  Dockerfile  README.md  process.py  pyproject.toml  run.py  setup.py
.github/workflows/: docker-publish-latest.yml  docker-publish-tag.yml
code/: my_parser.py  qmri_postproc.py  run.py
docs/source/: conf.py  index.rst  inputs_formatting.rst  installation.rst  outputs.rst  requirements.txt  usage.rst
hbcd_qmri_postproc/: my_parser.py  qmri_postproc.py  run.py
postproc_code/: my_parser.py  qmri_postproc.py  run.py
