[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HBCD_SYMRI_POSTPROC"
version = "1"
description = "TBD"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "ants",
    "nibabel"
]

# Add any other dependencies your project requires here
[project.optional-dependencies]
doc = [
    "sphinx >= 5",
    "sphinx-argparse",
    "sphinx_rtd_theme>=0.5.2"
]