[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions"]
build-backend = "hatchling.build"

[project]
name = "HBCD_SYMRI_POSTPROC"
version = "1.0.0"
description = "TBD"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "ants",
    "nibabel"
]

[project.optional-dependencies]
doc = [
    "pydot >= 1.2.3",
    "sphinx >= 7.3",
    "sphinx-argparse",
    "sphinx_rtd_theme>=0.5.2",
]

[project.urls]
"Homepage" = "https://example.com"
"Documentation" = "https://example.com/docs"
"Source Code" = "https://github.com/yourname/yourproject"
"Issue Tracker" = "https://github.com/yourname/yourproject/issues"

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "nipreps-calver" }

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.pytest.ini_options]
minversion = "6"
log_cli_level = "INFO"
xfail_strict = true
norecursedirs = [".git"]
addopts = ["-svx", "-ra", "--strict-config", "--strict-markers", "--doctest-modules"]
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S311",  # We are not using random for cryptographic purposes
  "ISC001",
  "S603",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"